# liveness-detection-sketches

14_02_25__keras_self_train_and_run/: pyproject.toml  readme.md
14_02_25__keras_self_train_and_run/src/: liveness21.py  liveness22.py  model_train2.py
17_02_25__face_detection/: README.md  pyproject.toml
17_02_25__face_detection/src/: face_detection.py
